build: replace deprecated configration with add-exports options